--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,7 +3,7 @@
 todo (
         COMPONENT             : 'login',
         PROJECT_NAME          : "TODO",
-        SLAVE_LABEL           : "GOLANG",
+        SLAVE_LABEL           : "master",
         SKIP_NEXUS_UPLOAD     : false,
         APP_TYPE              : "GOLANG"
 )
